--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-#TODO rellena las dependencias que creas que necesita pyramide
-requests
-beautifulsoup4
+#TODO rellena las dependencias que necesita pyramide
